[tool.poetry]
name = "reconstant"
version = "0.2.0"
description = "Share constant definitions between programming languages and make your constants constant again."
authors = ["Natan Yellin <aantny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
PyYAML = "^5.4.1"
pydantic = "^1.8.1"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reconstant = 'reconstant:main'